--- a/index.html
+++ b/index.html
@@ -1,74 +1,46 @@
 <!DOCTYPE html>
-<html lang="th">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>ระบบเช็คอินเข้า-ออกงาน</title>
-<style>
-  body {
-    margin: 0; padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    background: #f0f0f0;
-  }
-  #mainContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  .form {
-    display: flex; flex-direction: column; gap: 20px;
-    background-color: #fff; padding: 50px; border-radius: 20px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2); width: 500px;
-  }
-  select, textarea {
-    font-size: 1.5rem; padding: 10px; border-radius: 10px; border: 1.5px solid #ccc; width: 100%;
-  }
-  button {
-    font-size: 1.5rem; padding: 15px; border: none; border-radius: 10px;
-    background-color: #2d79f3; color: #fff; cursor: pointer;
-    transition: 0.2s;
-  }
-  button:hover { background-color: #1c5cd6; }
-  #result { font-size: 1.5rem; font-weight: bold; text-align: center; margin-top: 15px; }
-  .success { color: green; }
-  .error { color: red; }
-</style>
+  <meta charset="UTF-8">
+  <title>ระบบเช็คอินเข้า-ออกงาน</title>
+  <style>
+    body { margin:0; padding:0; font-family:sans-serif; display:flex; justify-content:center; align-items:center; height:100vh; background:#f4f4f4; }
+    .form { display:flex; flex-direction:column; gap:20px; background:#fff; padding:40px; border-radius:20px; width:500px; }
+    select, textarea, button { width:100%; padding:15px; border-radius:10px; border:1px solid #ccc; font-size:18px; }
+    button { background:#67bb05; color:#fff; border:none; cursor:pointer; transition:0.3s; }
+    button:hover { background:#57a304; }
+    #result { font-size:20px; font-weight:bold; text-align:center; }
+    .success { color:green; }
+    .error { color:red; }
+  </style>
 </head>
 <body>
-  <div id="mainContainer">
-    <form class="form" id="checkInForm">
-      <label>เลือกชื่อเจ้าหน้าที่</label>
-      <select id="employeeSelect"><option value="">-- เลือกชื่อ --</option></select>
 
-      <label>รายละเอียดเพิ่มเติม (ไม่บังคับ)</label>
-      <textarea id="note" placeholder="ใส่เหตุผลหรือข้อความเพิ่มเติม..."></textarea>
+  <form class="form" id="checkInForm">
+    <select id="employeeSelect">
+      <option value="">-- เลือกชื่อ --</option>
+    </select>
 
-      <button type="button" id="checkInBtn">เช็คชื่อเข้า</button>
-      <div id="result"></div>
-    </form>
-  </div>
+    <textarea id="note" placeholder="ใส่เหตุผลหรือข้อความเพิ่มเติม..."></textarea>
+    <button type="button" onclick="checkInEmployee()">เช็คชื่อเข้า</button>
+    <div id="result"></div>
+  </form>
 
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxeI_8mx6kjznc5NuJ1u59dCP2dAFgFwLUUOHr06TjpnlKrfkg2ffMYdV1GvLGxtLEC/exec";
 
-    // โหลดรายชื่อพนักงาน
     async function loadEmployees() {
-      try {
-        const res = await fetch(SCRIPT_URL + "?action=getEmployees");
-        const employees = await res.json();
-        const select = document.getElementById("employeeSelect");
-        employees.forEach(emp => {
-          const option = document.createElement("option");
-          option.value = emp.id;
-          option.text = emp.id + " - " + emp.name;
-          select.appendChild(option);
-        });
-      } catch(err) {
-        console.error("โหลดรายชื่อพนักงานล้มเหลว:", err);
-      }
+      const res = await fetch(SCRIPT_URL + "?action=getEmployees");
+      const employees = await res.json();
+      const select = document.getElementById("employeeSelect");
+      employees.forEach(emp => {
+        const option = document.createElement("option");
+        option.value = emp.id;
+        option.text = emp.id + " - " + emp.name;
+        select.appendChild(option);
+      });
     }
 
-    // ฟังก์ชันเช็คชื่อ
     async function checkInEmployee() {
       const select = document.getElementById("employeeSelect");
       const staffId = select.value;
@@ -76,27 +48,19 @@
       const note = document.getElementById("note").value;
       const resultDiv = document.getElementById("result");
 
-      if (!staffId) {
+      if(!staffId) {
         resultDiv.textContent = "กรุณาเลือกชื่อก่อน!";
         resultDiv.className = "error";
         return;
       }
 
-      try {
-        const res = await fetch(`${SCRIPT_URL}?action=checkIn&name=${encodeURIComponent(name)}&staffId=${encodeURIComponent(staffId)}&note=${encodeURIComponent(note)}`);
-        const data = await res.json();
-        resultDiv.textContent = data.msg;
-        resultDiv.className = data.status === "success" ? "success" : "error";
-      } catch(err) {
-        resultDiv.textContent = "เกิดข้อผิดพลาด โปรดลองใหม่";
-        resultDiv.className = "error";
-        console.error(err);
-      }
+      const res = await fetch(`${SCRIPT_URL}?action=checkIn&name=${encodeURIComponent(name)}&staffId=${encodeURIComponent(staffId)}&note=${encodeURIComponent(note)}`);
+      const data = await res.json();
+
+      resultDiv.textContent = data.msg;
+      resultDiv.className = data.status === "success" ? "success" : "error";
     }
 
-    document.getElementById("checkInBtn").addEventListener("click", checkInEmployee);
-
-    // เรียกโหลดพนักงานตอนเปิดหน้า
     loadEmployees();
   </script>
 </body>
