--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     .success { color:green; }
     .error { color:red; }
   </style>
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
 
@@ -26,42 +27,73 @@
     <div id="result"></div>
   </form>
 
-  <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxeI_8mx6kjznc5NuJ1u59dCP2dAFgFwLUUOHr06TjpnlKrfkg2ffMYdV1GvLGxtLEC/exec";
+<script>
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxeI_8mx6kjznc5NuJ1u59dCP2dAFgFwLUUOHr06TjpnlKrfkg2ffMYdV1GvLGxtLEC/exec";
 
-    async function loadEmployees() {
-      const res = await fetch(SCRIPT_URL + "?action=getEmployees");
-      const employees = await res.json();
-      const select = document.getElementById("employeeSelect");
-      employees.forEach(emp => {
-        const option = document.createElement("option");
-        option.value = emp.id;
-        option.text = emp.id + " - " + emp.name;
-        select.appendChild(option);
-      });
+// โหลดรายชื่อพนักงาน
+async function loadEmployees() {
+  try {
+    const res = await fetch(SCRIPT_URL + "?action=getEmployees");
+    if (!res.ok) throw new Error("ไม่สามารถโหลดรายชื่อพนักงานได้");
+    const employees = await res.json();
+    const select = document.getElementById("employeeSelect");
+    
+    // เพิ่ม option เริ่มต้น
+    select.innerHTML = '<option value="">-- เลือกชื่อ --</option>';
+
+    employees.forEach(emp => {
+      const option = document.createElement("option");
+      option.value = emp.id;
+      option.text = `${emp.id} - ${emp.name}`;
+      select.appendChild(option);
+    });
+  } catch (err) {
+    console.error(err);
+    alert("เกิดข้อผิดพลาดในการโหลดรายชื่อพนักงาน");
+  }
+}
+
+// เช็คชื่อพนักงาน
+async function checkInEmployee() {
+  const select = document.getElementById("employeeSelect");
+  const staffId = select.value;
+  const fullText = select.options[select.selectedIndex].text;
+  const name = fullText.includes(" - ") ? fullText.split(" - ").slice(1).join(" -") : fullText;
+  const note = document.getElementById("note").value;
+  const resultDiv = document.getElementById("result");
+
+  if (!staffId) {
+    resultDiv.textContent = "กรุณาเลือกชื่อก่อน!";
+    resultDiv.className = "error";
+    return;
+  }
+
+  try {
+    const res = await fetch(`${SCRIPT_URL}?action=checkIn&name=${encodeURIComponent(name)}&staffId=${encodeURIComponent(staffId)}&note=${encodeURIComponent(note)}`);
+    if (!res.ok) throw new Error("ไม่สามารถเช็คชื่อได้");
+    const data = await res.json();
+
+    resultDiv.textContent = data.msg;
+    resultDiv.className = data.status === "success" ? "success" : "error";
+
+    // เล่นเสียง
+    if (data.status === "success") {
+      document.getElementById("successSound")?.play();
+    } else {
+      document.getElementById("errorSound")?.play();
     }
+  } catch (err) {
+    console.error(err);
+    resultDiv.textContent = "เกิดข้อผิดพลาดในการเช็คชื่อ";
+    resultDiv.className = "error";
+    document.getElementById("errorSound")?.play();
+  }
+}
 
-    async function checkInEmployee() {
-      const select = document.getElementById("employeeSelect");
-      const staffId = select.value;
-      const name = select.options[select.selectedIndex].text.split(" - ").slice(1).join(" -");
-      const note = document.getElementById("note").value;
-      const resultDiv = document.getElementById("result");
+// เรียกโหลดพนักงานทันที
+loadEmployees();
+</script>
 
-      if(!staffId) {
-        resultDiv.textContent = "กรุณาเลือกชื่อก่อน!";
-        resultDiv.className = "error";
-        return;
-      }
-
-      const res = await fetch(`${SCRIPT_URL}?action=checkIn&name=${encodeURIComponent(name)}&staffId=${encodeURIComponent(staffId)}&note=${encodeURIComponent(note)}`);
-      const data = await res.json();
-
-      resultDiv.textContent = data.msg;
-      resultDiv.className = data.status === "success" ? "success" : "error";
-    }
-
-    loadEmployees();
-  </script>
 </body>
 </html>
+
