--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     .error { color:red; }
   </style>
   <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#67bb05">
 </head>
 <body>
 
@@ -96,4 +97,5 @@ loadEmployees();
 
 </body>
 </html>
+
 
