--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ระบบเช็คอินเข้า-ออกงาน</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { margin:0; padding:0; font-family:sans-serif; display:flex; justify-content:center; align-items:center; height:100vh; background:#f4f4f4; }
     .form { display:flex; flex-direction:column; gap:20px; background:#fff; padding:40px; border-radius:20px; width:500px; }
@@ -97,5 +98,6 @@ loadEmployees();
 
 </body>
 </html>
+
 
 
