--- a/index.html
+++ b/index.html
@@ -2,106 +2,45 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
+  <title>ระบบเช็คอินเข้า-ออกงาน</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mobile Theme</title>
   <style>
     body {
       margin: 0;
-      font-family: "Sarabun", sans-serif;
-      background: #f5f7fa;
-      color: #222;
-    }
-
-    /* Header */
-    .app-header {
-      background: #4a90e2;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.2rem;
-      font-weight: bold;
-    }
-
-    /* Container */
-    .app-container {
-      padding: 1rem;
-      margin-bottom: 4rem; /* กัน bottom-nav ทับ */
-    }
-
-    /* Card */
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    .card h2 {
-      margin: 0 0 0.5rem;
-      font-size: 1.1rem;
-    }
-
-    .card p {
-      margin: 0;
-      font-size: 0.95rem;
-      color: #555;
-    }
-
-    /* Bottom Navigation */
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: white;
-      border-top: 1px solid #ddd;
+      height: 100vh;
       display: flex;
-      justify-content: space-around;
-      padding: 0.5rem 0;
+      justify-content: center;
+      align-items: center;
+      background: #f5f5f5;
+      font-family: sans-serif;
     }
-
-    .bottom-nav a {
-      text-decoration: none;
-      color: #4a90e2;
-      font-size: 0.9rem;
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
     }
-
-    /* Responsive (Mobile First) */
-    @media (min-width: 768px) {
-      .card {
-        max-width: 600px;
-        margin: 1rem auto;
-      }
+    .loading {
+      font-size: 1.2rem;
+      color: #333;
     }
   </style>
 </head>
 <body>
-  <header class="app-header">
-    🌟 แอปของเรา
-  </header>
+  <div class="loading">กำลังโหลดระบบเช็คอิน...</div>
+  <iframe id="appFrame" style="display:none;"></iframe>
 
-  <main class="app-container">
-    <section class="card">
-      <h2>เมนูที่ 1</h2>
-      <p>รายละเอียดของเมนูนี้</p>
-    </section>
+  <script>
+    // ใส่ URL ของ Apps Script Web App ที่ deploy แล้ว
+    const GAS_URL = "https://script.google.com/macros/s/AKfycbxeI_8mx6kjznc5NuJ1u59dCP2dAFgFwLUUOHr06TjpnlKrfkg2ffMYdV1GvLGxtLEC/exec";
 
-    <section class="card">
-      <h2>เมนูที่ 2</h2>
-      <p>รายละเอียดของเมนูนี้</p>
-    </section>
+    const frame = document.getElementById("appFrame");
+    const loading = document.querySelector(".loading");
 
-    <section class="card">
-      <h2>เมนูที่ 3</h2>
-      <p>รายละเอียดของเมนูนี้</p>
-    </section>
-  </main>
-
-  <nav class="bottom-nav">
-    <a href="#">🏠 Home</a>
-    <a href="#">📊 รายงาน</a>
-    <a href="#">⚙️ ตั้งค่า</a>
-  </nav>
+    frame.src = GAS_URL;
+    frame.onload = () => {
+      loading.style.display = "none";
+      frame.style.display = "block";
+    };
+  </script>
 </body>
 </html>
