--- a/index.html
+++ b/index.html
@@ -2,45 +2,190 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>ระบบเช็คอินเข้า-ออกงาน</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ระบบเช็คชื่อเข้า-ออกงาน</title>
+
+  <!-- Manifest -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#67bb05">
+
   <style>
+    /* ====== รีเซ็ต + ฟอนต์ ====== */
     body {
       margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      font-family: "Sarabun", sans-serif;
       background: #f5f5f5;
-      font-family: sans-serif;
-    }
-    iframe {
-      border: none;
-      width: 100%;
-      height: 100%;
-    }
-    .loading {
-      font-size: 1.2rem;
       color: #333;
+    }
+
+    header {
+      background: #67bb05;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 1rem;
+      max-width: 480px;
+      margin: auto;
+    }
+
+    .card {
+      background: white;
+      border-radius: 12px;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+    }
+
+    input, textarea, button {
+      width: 100%;
+      padding: 0.8rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+
+    button {
+      background: #67bb05;
+      color: white;
+      border: none;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    button:hover {
+      background: #5ca304;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 0.9rem;
+    }
+
+    th, td {
+      border: 1px solid #ddd;
+      padding: 0.6rem;
+      text-align: center;
+    }
+
+    th {
+      background: #67bb05;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <div class="loading">กำลังโหลดระบบเช็คอิน...</div>
-  <iframe id="appFrame" style="display:none;"></iframe>
+  <header>ระบบเช็คชื่อเข้า-ออกงาน</header>
+
+  <main>
+    <!-- ฟอร์มเช็คชื่อ -->
+    <div class="card">
+      <label for="name">ชื่อพนักงาน</label>
+      <input type="text" id="name" placeholder="กรอกชื่อ">
+
+      <label for="note">บันทึกเพิ่มเติม</label>
+      <textarea id="note" rows="3" placeholder="ใส่ note ถ้ามี..."></textarea>
+
+      <button onclick="checkIn()">เช็คชื่อเข้า</button>
+      <button onclick="checkOut()">เช็คชื่อออก</button>
+    </div>
+
+    <!-- ประวัติการเช็คชื่อ -->
+    <div class="card">
+      <h3>ประวัติการเช็คชื่อ</h3>
+      <table id="historyTable">
+        <thead>
+          <tr>
+            <th>ชื่อ</th>
+            <th>สถานะ</th>
+            <th>เวลา</th>
+            <th>Note</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </main>
 
   <script>
-    // ใส่ URL ของ Apps Script Web App ที่ deploy แล้ว
-    const GAS_URL = "https://script.google.com/macros/s/AKfycbxeI_8mx6kjznc5NuJ1u59dCP2dAFgFwLUUOHr06TjpnlKrfkg2ffMYdV1GvLGxtLEC/exec";
+    // โหลดประวัติจาก localStorage
+    document.addEventListener("DOMContentLoaded", loadHistory);
 
-    const frame = document.getElementById("appFrame");
-    const loading = document.querySelector(".loading");
+    function getTime() {
+      const now = new Date();
+      return now.toLocaleString("th-TH");
+    }
 
-    frame.src = GAS_URL;
-    frame.onload = () => {
-      loading.style.display = "none";
-      frame.style.display = "block";
-    };
+    function addRecord(name, status, note) {
+      const table = document.querySelector("#historyTable tbody");
+      const row = document.createElement("tr");
+      row.innerHTML = `
+        <td>${name}</td>
+        <td>${status}</td>
+        <td>${getTime()}</td>
+        <td>${note || "-"}</td>
+      `;
+      table.prepend(row);
+
+      // เก็บลง localStorage
+      const history = JSON.parse(localStorage.getItem("checkinHistory")) || [];
+      history.unshift({ name, status, time: getTime(), note });
+      localStorage.setItem("checkinHistory", JSON.stringify(history));
+    }
+
+    function loadHistory() {
+      const history = JSON.parse(localStorage.getItem("checkinHistory")) || [];
+      const table = document.querySelector("#historyTable tbody");
+      table.innerHTML = "";
+      history.forEach(record => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${record.name}</td>
+          <td>${record.status}</td>
+          <td>${record.time}</td>
+          <td>${record.note || "-"}</td>
+        `;
+        table.appendChild(row);
+      });
+    }
+
+    function checkIn() {
+      const name = document.getElementById("name").value.trim();
+      const note = document.getElementById("note").value.trim();
+      if (!name) return alert("กรุณากรอกชื่อ");
+      addRecord(name, "เข้า", note);
+      document.getElementById("note").value = "";
+    }
+
+    function checkOut() {
+      const name = document.getElementById("name").value.trim();
+      const note = document.getElementById("note").value.trim();
+      if (!name) return alert("กรุณากรอกชื่อ");
+      addRecord(name, "ออก", note);
+      document.getElementById("note").value = "";
+    }
+
+    // Register Service Worker
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then(reg => console.log('Service Worker ลงทะเบียนแล้ว:', reg))
+          .catch(err => console.log('Service Worker error:', err));
+      });
+    }
   </script>
 </body>
 </html>
